--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "google-calendar": "^1.3.2",
     "googleapis": "^27.0.0",
     "mongoose": "^5.2.7",
     "morgan": "^1.9.0",
